# fastqc_to_json

./: .cruft.json  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
docker/: Dockerfile
fastqc_to_json/: __init__.py  __main__.py  main.py
tests/unit/: test_main.py
